--- a/index.ipynb
+++ b/index.ipynb
@@ -69,9 +69,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/conda/lib/python3.6/importlib/_bootstrap.py:219: RuntimeWarning: numpy.dtype size changed, may indicate binary incompatibility. Expected 96, got 88\n",
+      "  return f(*args, **kwds)\n",
+      "/opt/conda/lib/python3.6/importlib/_bootstrap.py:219: RuntimeWarning: numpy.dtype size changed, may indicate binary incompatibility. Expected 96, got 88\n",
+      "  return f(*args, **kwds)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<script>requirejs.config({paths: { 'plotly': ['https://cdn.plot.ly/plotly-latest.min']},});if(!window.Plotly) {{require(['plotly'],function(plotly) {window.Plotly=plotly;});}}</script>"
+      ],
+      "text/vnd.plotly.v1+html": [
+       "<script>requirejs.config({paths: { 'plotly': ['https://cdn.plot.ly/plotly-latest.min']},});if(!window.Plotly) {{require(['plotly'],function(plotly) {window.Plotly=plotly;});}}</script>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.plotly.v1+json": {
+       "data": [
+        {
+         "mode": "lines",
+         "name": "estimated revenue",
+         "text": [],
+         "type": "scatter",
+         "uid": "79f833d0-cc55-11e8-aa2e-0242ac11000e",
+         "x": [
+          0,
+          150
+         ],
+         "y": [
+          0,
+          450
+         ]
+        }
+       ],
+       "layout": {
+        "title": "Movie Spending and Revenue (in millions)"
+       }
+      },
+      "text/html": [
+       "<div id=\"53679aa2-6c6c-450e-8ed0-23f2a1c43881\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"53679aa2-6c6c-450e-8ed0-23f2a1c43881\", [{\"mode\": \"lines\", \"name\": \"estimated revenue\", \"text\": [], \"x\": [0, 150], \"y\": [0, 450], \"type\": \"scatter\", \"uid\": \"7a22df40-cc55-11e8-aa2e-0242ac11000e\"}], {\"title\": \"Movie Spending and Revenue (in millions)\"}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+      ],
+      "text/vnd.plotly.v1+html": [
+       "<div id=\"53679aa2-6c6c-450e-8ed0-23f2a1c43881\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"53679aa2-6c6c-450e-8ed0-23f2a1c43881\", [{\"mode\": \"lines\", \"name\": \"estimated revenue\", \"text\": [], \"x\": [0, 150], \"y\": [0, 450], \"type\": \"scatter\", \"uid\": \"7a22df40-cc55-11e8-aa2e-0242ac11000e\"}], {\"title\": \"Movie Spending and Revenue (in millions)\"}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "from lib.graph import trace_values, plot, layout\n",
     "\n",
